--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                 <h3>Explore varieties</h3>
                 <h1>Shop for your favorites meal as e dey hot.</h1>
                 <p>Shop for your favorite meals or drinks and enjoy while doing it.</p>
-            </div>
-            
+            </div> 
         </div>
         <div class="login-page">
             <div class="page-img">
@@ -78,13 +77,15 @@
             <div class="end-text">
                 <h1>Download the app now.</h1>
                 <p>Available on your favorite store. Start your premium experience now</p>
+            </div>
+            <div class="end-button">
                 <button class="end-button-one">Playstore</button>
                 <button class="end-button-two">Appstore</button>
+                <button class="end-button-three">Try for free</button>
             </div>
-
         </div>
         <div class="contact">
-            <img src="./images/left.png">
+            <img class= "end-logo" src="./images/left.png">
             <div class="contact-socal">
                 <i class="fa-brands fa-twitter"></i>
                 <i class="fa-brands fa-square-facebook"></i>
